# device_link_issue

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  add.cpp  add.h  add_cpu.cpp  div.cpp  div.h  math_config.h  mul.cpp  mul.h  mul_cpu.cpp
submod/: CMakeLists.txt  devut.cu  devut.h  devut_config.h
test/: CMakeLists.txt  exec.cpp
